# zambesii

./: .gitignore  .gitmodules  BUILD.md  CROSS-COMPILE.md  LICENSE  LICENSING  Makefile  Makefile.am  Makefile.in  README  __kendoFs.S  bh  configure  configure.ac  criticism.txt  current-progress.txt  force_cpp_link.cpp  index.html  ldSearchDirs.ld  ldSearchDirs.ld.in  mlog  out.txt  q  seroutbochs.txt  set-build-toolchain-and-vars.mk  set-host-toolchain-and-vars.mk  set-zbz-toolchain-and-vars.mk  todo.txt  v0.00.015-release-notes.md  x8632.bvars.sh  zbz.geany
__kcore/: Makefile.am  udi_index.S
__kcore/__kclasses/: Makefile.am  allocTable.cpp  bitmap.cpp  cachePool.cpp  debugBuffer.cpp  debugPipe.cpp  hardwareIdList.cpp  heap.cpp  memBmp.cpp  memReservoir.cpp  memoryBog.cpp  pageTableCache.cpp  singleWaiterQueue.cpp  slamCache.cpp  test_memBmp.cpp
__kcore/__kstdlib/: Makefile.am  __kmath.cpp  debug.cpp  gcc-static-constructors.md  test___kbitManipulation.cpp
__kcore/__kstdlib/__klibc/: Makefile.am  malloc.cpp
__kcore/__kstdlib/__klibc/i586/: Makefile.am  crt0.S  crti.S  crtn.S
__kcore/__kstdlib/__klibcxx/: Makefile.am  new.cpp
__kcore/__kstdlib/gcclibstdcxx/: .gitignore  Makefile.am  README.md  config-ml.in  configure.ac  ltmain.sh
__kcore/__kstdlib/gcclibstdcxx/libgcc/: gthr-posix.h  gthr-single.h  gthr.h
__kcore/__kstdlib/gcclibstdcxx/patches/: 02-freestanding-makefile.patch
__kcore/__kstdlib/icxxabi/: Makefile.am  callConstructors.cpp  dso.cpp
__kcore/__kthreads/: Makefile  Makefile.am  __kcpuPowerOn.cpp
__kcore/__kthreads/i586/: Makefile.am  __kcpuPowerOnEntry.S  __kcpuPowerOnMain.cpp  crt0.S  crti.S  crtn.S  main.cpp
__kcore/arch/: Makefile.am
__kcore/arch/i586/: Makefile.am  __kexceptionTable.cpp  cpuEnumerationIntel.cpp  cpuid.S  debug.cpp  exceptions.cpp  exceptions.h  msr.S  string.cpp  string8.cpp  taskContext.cpp  tlbControl.cpp  vectorHandlers.S  wPRanger_convertFlags.cpp  wPRanger_getLevelRanges.cpp  wPRanger_lookup.cpp  wPRanger_mapInc.cpp  wPRanger_mapNoInc.cpp  wPRanger_remapInc.cpp  wPRanger_remapNoInc.cpp  wPRanger_setAttributes.cpp  x8632_debugException.cpp  x8632_generalProtectionFault.cpp  x8632_pageFault.cpp
__kcore/chipset/: Makefile.am  dedicatedMemoryRegions.cpp  timerControl_filters.cpp  timerDevice.cpp
__kcore/chipset/generic/: Makefile.am  dedicatedMemoryRegions.cpp  memoryConfig.cpp  memoryMap.cpp
__kcore/chipset/ibmPc/: 8259APic.txt  Makefile.am  acpi.h  busPinMappings.h  cpuDetection.cpp  dedicatedMemoryRegions.cpp  findTables.cpp  i8254.cpp  i8254.h  i8254_pit.cpp  i8259a.cpp  irqControl.cpp  isa_busPinMappings.cpp  memoryDetection.cpp  regionMap.cpp  rs232.cpp  rs232.h  rtcmos.cpp  rtcmos.h  timerControl.cpp  vgaTerminal.cpp  vgaTerminal.h  zkcmCore.cpp
__kcore/commonlibs/: Makefile.am  libzudiIndexParser.cpp
__kcore/commonlibs/drivers/: Makefile.am  zramdisk.cpp  zramdisk.udidprops  zrootdev.cpp  zrootdev.h  zrootdev.udidprops
__kcore/commonlibs/libacpi/: Makefile.am  madt.cpp  rsdp.cpp  rxsdt.cpp  srat.cpp
__kcore/commonlibs/libx86mp/: Makefile.am  lapic_core.cpp  lapic_ipi.cpp  lapic_lint.cpp  libIoApic.cpp  mpDefaultTables.cpp  mpTables.cpp
__kcore/commonlibs/libzbzcore/: Makefile.am  devicePath.cpp  distributaryPath.cpp  driverPath.cpp  layout.cpp  libzudi.cpp  libzudi_buf.cpp  main.cpp  notes.txt
__kcore/commonlibs/metalanguages/: Makefile.am  floodplainn.udimprops  udi_bridge.cpp  udi_bridge.udimprops  udi_gio.cpp  udi_gio.udimprops
__kcore/firmware/: Makefile.am
__kcore/firmware/ibmPcBios/: Makefile.am  debug-notes.txt  decode.c  fpu.c  ibmPcBios_coreFuncs.cpp  ibmPcBios_getRegs.cpp  ops.c  ops2.c  prim_ops.c  sys.c
__kcore/include/: in_asm.h  multiboot2.h
__kcore/include/__kclasses/: __kequalizerList.h  __kpageBlock.h  allocTableEntry.h  arrayStack.h  bitmap.h  cachePool.h  cacheStack.h  clock_t.h  currentt.h  debugBuffer.h  debugPipe.h  hardwareIdList.h  heap.h  heapCache.h  heapDoubleList.h  heapList.h  list.h  memBmp.h  memReservoir.h  memoryBog.h  multiLayerHash.h  pageTableCache.h  prioQueue.h  resizeableArray.h  singleWaiterQueue.h  slamCache.h  sortedHeapDoubleList.h  swampInfoNode.h  tests.h  waitQueue.h  wrapAroundCounter.h
__kcore/include/__kstdlib/: __kcxxCast.h  __kflagManipulation.h  __ktypes.h  callback.h  continuation.h  tests.h
__kcore/include/__kstdlib/__kclib/: stdlib.h  string16.h
__kcore/include/__kstdlib/__kcxxlib/: atomic  memory  new
__kcore/include/__kstdlib/compiler/: cxxrtl.h
__kcore/include/__kthreads/: __kcpuPowerOn.h  __korientation.h  main.h
__kcore/include/arch/: cpuControl.h  debug.h  io.h  memory.txt  paddr_t.h  paddr_t.txt  paging.txt  registerContext.h  schedTimer.h  tlbState.txt  walkerPageRanger.h
__kcore/include/arch/x8632/: arch.h  atomic.h  cpuControl.h  cpuEnumeration.h  cpuFlags.h  cpuid-pagingfeatures.semantics  debug.h  idt.h  interrupts.h  memory.h  paddr_t.h  paging.h  tlbContext.h  wPRanger_accessors.h
__kcore/include/chipset/: chipset.h  cpus.h  dedicatedMemoryRegions.h  memory.h  memoryAreas.h  regionMap.h  terminalFwRiv.h
__kcore/include/chipset/generic/: chipset.h  dedicatedMemoryRegions.h  regionMap.h
__kcore/include/chipset/ibmPc/: chipset.h  cpus.h  dedicatedMemoryRegions.h  memory.h  memoryAreas.h  regionMap.h
__kcore/include/chipset/pkg/: watchdogMod.h
__kcore/include/commonlibs/: libzudiIndexParser.h
__kcore/include/firmware/: firmware_include.h
__kcore/include/kernel/common/: lock.h  (+25 more)
__kcore/kernel/: Makefile.am
__kcore/kernel/common/: Makefile.am  __kclassInstances.cpp  __kheaders.cpp  __koptimizationHacks.cpp  lock.cpp  messageStream.cpp  multipleReaderLock.cpp  numaCpuBank.cpp  numaMemoryBank.cpp  panic.cpp  process.cpp  recursiveLock.cpp  thread.cpp  vSwamp.cpp  waitLock.cpp  zasyncStream.cpp
__kcore/kernel/i586/: Makefile.am  __kclassInstances.cpp  cpuStream.cpp  cpuStream_powerManager.cpp  intelMp.txt  interCpuMessager.cpp  interruptTrib.cpp  vaddrSpace.cpp
__kcore/platform/: Makefile.am
__kcore/platform/i586-ibmPc/: Makefile.am  __klinkScript.S  __kpagingLevel1Tables.S  placementAddresses.txt
(+988 files in other folders)
